Implement build script for Vercel deployment and include all pending changes

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "build": "tsc",
-    "start": "npm run build && npx http-server . -c-1 -p 8000"
+    "build": "node build.js",
+    "start": "npm run build && npx http-server dist -c-1 -p 8000"
   },
   "dependencies": {
     "typescript": "^5.9.3"
