tutorial improvements, add watch command, change default sensitivity to 1 to prevent user confusion

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "homepage": "/blocks",
   "scripts": {
     "build": "node build.js",
+    "watch": "npx -y nodemon --watch src --watch index.html --watch styles.css --ext ts,html,css --exec \"npm run build\"",
     "start": "npm run build && npx http-server dist -c-1 -p 8000"
   },
   "dependencies": {
