feat: Rework powerup spawning to be time-based with persistence, improve PWA activation, add high score notifications, fix magnifier loupe appearing on iOS, and rename game to Blockdoku.

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-	"name": "Block Sudoku",
-	"short_name": "BlockSudoku",
+	"name": "Blockdoku",
+	"short_name": "Blockdoku",
 	"start_url": "./",
 	"display": "standalone",
 	"background_color": "#121214",
