--- a/package.json
+++ b/package.json
@@ -6,18 +6,12 @@
   "license": "MIT",
   "private": true,
   "homepage": "/blocks",
-  "type": "module",
   "scripts": {
-    "build": "node build.cjs",
+    "build": "node build.js",
     "watch": "npx -y nodemon --watch src --watch index.html --watch styles.css --ext ts,html,css --exec \"npm run build\"",
-    "start": "npm run build && vercel dev"
+    "start": "npm run build && npx http-server dist -c-1 -p 8000"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.88.0",
-    "@types/node": "^25.0.2",
-    "@upstash/redis": "^1.35.8",
-    "@vercel/node": "^5.5.15",
-    "typescript": "^5.9.3",
-    "vercel": "^50.1.0"
+    "typescript": "^5.9.3"
   }
 }
