--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "author": "Matthew Murphy",
   "license": "MIT",
   "private": true,
-  "homepage": "/blocks",
   "scripts": {
     "build": "node build.js",
     "watch": "npx -y nodemon --watch src --watch index.html --watch styles.css --ext ts,html,css --exec \"npm run build\"",
@@ -13,6 +12,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.88.0",
+    "@vercel/node": "^5.5.15",
     "typescript": "^5.9.3"
   }
 }
