--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
   "scripts": {
     "build": "node build.js",
     "watch": "npx -y nodemon --watch src --watch api --watch index.html --watch styles.css --ext ts,html,css --exec \"npm run build\"",
-    "start": "npm run build && npx http-server dist -c-1 -p 8000",
     "dev:web": "vite",
-    "dev:api": "vercel dev --listen 3000",
-    "dev:all": "concurrently -k -n web,api -c cyan,magenta \"npm:dev:web\" \"npm:dev:api\""
+    "dev:api": "vercel dev --listen 3001",
+    "start": "concurrently -k -n web,api -c cyan,magenta \"npm:dev:web\" \"npm:dev:api\""
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.88.0",
+    "@vercel/analytics": "^1.6.1",
     "@vercel/node": "^5.5.15",
     "typescript": "^5.9.3"
   },
